--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button id="buttonSubmit" class="btn btn-primary">Ambil Data</button>
             </div>
         </div>
-        <div id="hasilFetchdata" class="table table-responsive table-dark"></div>
+        <div id="hasilFetchdata" class="table-responsive"></div>
     </div>
     <script src="script.js"></script>
 </body>
